<resources>
    <string name="app_name">공약지킴이</string>
    <string name="tab_title_one">공약이행</string>
    <string name="tab_title_two">시민의원</string>
    <string name="tab_title_three">토막상식</string>
    <string name="manifesto_content">클릭해서 공약이행률 보기</string>
    <string name="manifesto_mayor">서울시장</string>
    <string name="manifesto_education">교육청장</string>
    <string name="k_temp">매니페스토(Manifesto)는 개인이나 단체가 대중에 대하여 확고한 정치적 의도와 견해를 밝히는 것으로 연설이나 문서의 형태이다. 종종 비정치적인 분야에서도 자신의 주장과 견해를 분명히 밝히는 때에도 사용된다. 한국에서는 예산확보, 구체적 실행계획 등이 있어 이행이 가능한 선거 공약의 의미로 주로 쓰인다.</string>
    <string name="m_name">이름</string>
    <string name="m_day">출생</string>
    <string name="m_born">고향</string>
    <string name="m_age">나이</string>
    <string name="m_education">학력</string>
    <string name="m_map_small_title_one">이행률</string>
    <string name="m_map_small_title_two">이행현황</string>
    <string name="m_map_small_title_three">새소식</string>
    <string name="m_map_small_title_four">프로필</string>
    <string name="m_profile_aware">수상</string>
    <string name="m_profile_career">경력</string>
    <string name="m_profile_crime">범죄경력</string>
    <string name="m_promise_title">공약리스트</string>
    <string name="k_save">댓글쓰기</string>
    <string name="rate_total_title">전제 공약 이행률</string>
    <string name="promise_care">복지</string>
    <string name="promise_culture">문화</string>
    <string name="promise_edu">교육</string>
    <string name="promise_eco">경제</string>
    <string name="promise_city">도시</string>
    <string name="promise_admin">행정</string>
    <string name="promise_env">환경</string>
    <string name="reta_table_title">분류별 공약 이행률</string>
    <string name="rate_table_title_zero">분류</string>
    <string name="rate_table_title_one">사업완료 :</string>
    <string name="rate_table_title_two">정상추진 :</string>
    <string name="rate_table_title_three">일부추진 :</string>
    <string name="rate_table_title_four">계속추진 :</string>
    <string name="rate_table_title_five">검토 중  :</string>
    <string name="rate_detail_table_title_one">사업완료</string>
    <string name="rate_detail_table_title_two">정상추진</string>
    <string name="rate_detail_table_title_three">일부추진</string>
    <string name="rate_detail_table_title_four">계속추진</string>
    <string name="rate_detail_table_title_five">검토 중 </string>
    <string name="rate_table_title_one_des">공약 이행이 완료되어 종료된 사업</string>
    <string name="rate_table_title_two_des">공약 내용 이행 완료 후 추가적인 목표를 세워 추진중인 사업</string>
    <string name="rate_table_title_three_des">내용이 정상적으로 추진 중이고, 임기 종료 시점까지 완료가 예상되는 사업</string>
    <string name="rate_table_title_four_des">추진하고 있으나, 예상 목표를 달성하지 못하고 부진한 사업</string>
    <string name="rate_table_title_five_des">추진 되지 못하는 사업</string>
    <string name="rate_profile_career">경력</string>
    <string name="rate_profile_aware">수상</string>
    <string name="rate_profile_education">학력</string>
    <string name="citizen_listen">들려줘요</string>
    <string name="citizen_help">도와줘요</string>
    <string name="citizen_need">필요해요</string>
    <string name="citizen_add">전체보기</string>
    <string-array name="category_array">
        <item>분류</item>
        <item>경제</item>
        <item>도시</item>
        <item>문화</item>
        <item>복지</item>
        <item>행정</item>
        <item>환경</item>
    </string-array>
    <string-array name="writing_category_array">
        <item>분류를 선택해 주세요.</item>
        <item>경제</item>
        <item>도시</item>
        <item>문화</item>
        <item>복지</item>
        <item>행정</item>
        <item>환경</item>
    </string-array>
    <string-array name="writing_Gu_array">
        <item>구 선택</item>
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>
    <string-array name="sort_array">
        <item>최신순</item>
        <item>인기순</item>
    </string-array>
    <string name="writing">글 쓰기</string>
    <string name="writing_content">글 상세</string>
    <string name="graph">그래프</string>
    <string name="table">표</string>
    <string name="title_activity_citizen_listen">CitizenListenActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
</resources>