<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/colorWhite"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="분류를 선택해주세요."
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_eco"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/economy"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />
        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_culture"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/culture"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />
        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_city"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/cityAndSafty"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_admin"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/administation"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />
        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_care"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/welfare"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />
        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promise_env"
            android:textSize="@dimen/writing_text_size"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            fbutton:buttonColor="@color/environment"
            fbutton:shadowEnabled="false"
            fbutton:cornerRadius="30dp"
            />

    </LinearLayout>
</LinearLayout>