<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seoulapp.manifesto.ManifestoRateActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--mayor-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="서울시청"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            style="@style/m_map_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_name"
                    style="@style/m_map_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"
                    android:text="@string/m_day"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"
                    android:text="@string/m_born"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"
                    android:text="@string/m_age"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"
                    android:text="@string/m_education"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp">
                <TextView
                    android:id="@+id/m_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"/>
                <TextView
                    android:id="@+id/m_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"/>
                <TextView
                    android:id="@+id/m_born"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"/>
                <TextView
                    android:id="@+id/m_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"/>
                <TextView
                    android:id="@+id/m_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_text"/>

            </LinearLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/manifesto_major"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/gab"
            android:background="@color/colorBackgroundGray">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/m_map_small_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/m_map_small_t_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_smallTitle"
                    android:text="@string/m_map_small_title_one"
                    android:textColor="@color/colorMain"
                    />
                <TextView
                    android:id="@+id/m_map_small_s_one"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    style="@style/m_map_stick"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/gab"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundGray">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/m_map_small_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/m_map_small_t_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_smallTitle"
                    android:text="@string/m_map_small_title_two"
                    />
                <TextView
                    android:id="@+id/m_map_small_s_two"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    style="@style/m_map_stick"
                    android:visibility="invisible"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/gab"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundGray">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/m_map_small_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFF"
                >
                <TextView
                    android:id="@+id/m_map_small_t_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/m_map_smallTitle"
                    android:text="@string/m_map_small_title_three"
                    />
                <TextView
                    android:id="@+id/m_map_small_s_three"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    style="@style/m_map_stick"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/gab"
            android:background="@color/colorBackgroundGray">
        </LinearLayout>

        <!--content-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--one-->
            <LinearLayout
                android:id="@+id/m_map_small_frame_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rate"/>

            </LinearLayout>

            <!--two-->
            <LinearLayout
                android:id="@+id/m_map_small_frame_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_promise_title"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:id="@+id/m_promise_list"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorBackgroundGray">

                </LinearLayout>
            </LinearLayout>

            <!--three-->
            <LinearLayout
                android:id="@+id/m_map_small_frame_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_profile_aware"
                    style="@style/m_profile_title"/>

                <LinearLayout
                    android:id="@+id/m_profile_aware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_profile_career"
                    style="@style/m_profile_title"/>
                <LinearLayout
                    android:id="@+id/m_profile_career"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_profile_crime"
                    style="@style/m_profile_title"/>

                <LinearLayout
                    android:id="@+id/m_profile_crime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</ScrollView>
